force-app/main/default/objects/Address/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>BU - NPLMA; used to display address in SFS mobile app and Youreka. ADO 19238, 45294</description>
    <formula>IF(
NOT(ISBLANK(Street)),Street  &amp; &quot;, &quot; &amp; City &amp;&quot;, &quot; &amp;  State &amp; &quot;, &quot; &amp; PostalCode,

IF(
NOT(ISBLANK(Lat_Long_Name__c)), Lat_Long_Name__c&amp;&quot; (&quot;&amp;TEXT(Latitude)&amp;&quot;,&quot;&amp;TEXT(Longitude)&amp;&quot;)&quot;,

IF(
NOT(ISBLANK(TEXT(Latitude))), TEXT(Latitude)&amp;&quot;,&quot;&amp;TEXT(Longitude),&quot;Missing Address&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Address</label>
    <type>Text</type>
</CustomField>