force-app/main/default/objects/Address/fields/Lat_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long_Name__c</fullName>
    <description>45294 Used for Lat/Long addresses to provide a common Name</description>
    <inlineHelpText>Used for Lat/Long addresses to provide a common Name</inlineHelpText>
    <label>Lat/Long Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>