force-app/main/default/objects/Address/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>29512</description>
    <label>Sub Project</label>
    <referenceTo>Sub_Project__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>