force-app/main/default/objects/Address/fields/Trigger_Address_Update_In_Progress_Forms__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Address_Update_In_Progress_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>22631</description>
    <label>Trigger Address Update In Progress Forms</label>
    <type>Checkbox</type>
</CustomField>