force-app/main/default/objects/Address/recordTypes/Sub_Project_Address.recordType-meta.xml
<RecordType>
    <fullName>Sub_Project_Address</fullName>
    <active>true</active>
    <description>Sub Project Address</description>
    <label>Sub Project Address</label>
</RecordType>